Modify css to avoid shifting

--- a/src/view/styles/Simulator.css
+++ b/src/view/styles/Simulator.css
@@ -18,7 +18,7 @@
 
 .file-selector {
     padding: 20px;
-    min-height: 10px;
+    min-height: 20px;
 }
 
 .shake-pressed {
